@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-07-09T00:56:12Z",
+  "timestamp" : "2022-07-09T08:13:58Z",
   "count_outdated" : 380,
   "uniques_outdated" : 206,
   "count" : 408,
-  "uniques" : 221,
+  "uniques" : 222,
   "clones" : [
     {
       "timestamp": "2022-06-25T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -100,6 +100,13 @@
       "timestamp": "2022-07-08T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-09T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
